# shortcut-rs

./: Cargo.toml  README.md
src/: lib.rs
src/shortcut_files/: linux.rs  mod.rs  windows.rs
